@@ -10,58 +10,51 @@ import org.springframework.core.io.Resource;
 import org.springframework.security.crypto.bcrypt.BCrypt;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.DeleteObjectRequest;
+import software.amazon.awssdk.services.s3.model.GetObjectRequest;
+import software.amazon.awssdk.services.s3.model.PutObjectRequest;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @Service
 public class FileService {
-    @Value("${upload-file.base-uri}")
-    private String baseUri;
+
+    @Value("${cloud.aws.s3.bucket}")
+    private String bucketName;
+
+    @Autowired
+    private S3Client s3Client;
 
     @Autowired
     private DocumentRepository documentRepository;
 
-    public void createDirectory(String folder) {
-        // Không dùng URI, chỉ nối chuỗi path
-        Path path = Paths.get(baseUri, folder);
-        if (!Files.exists(path)) {
-            try {
-                Files.createDirectories(path);
-                System.out.println(">>> CREATED DIRECTORY: " + path.toAbsolutePath());
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
-        } else {
-            System.out.println(">>> DIRECTORY ALREADY EXISTS");
-        }
-    }
-
     public String handleStoreFile(MultipartFile file, String folder, String password) throws IOException {
         String finalName = System.currentTimeMillis() + "-" + file.getOriginalFilename();
-        Path path = Paths.get(baseUri, folder, finalName);
-
-        Files.createDirectories(path.getParent());
+        String s3Key = folder + "/" + finalName; // Tạo key cho S3 (e.g., "folder/filename")
 
         try {
             byte[] originalBytes = file.getBytes();
             byte[] encryptedBytes = AESUtil.encrypt(originalBytes, password);
-            Files.write(path, encryptedBytes);
-            return "/storage/" + folder + "/" + finalName;
+
+            // Lưu tệp tin mã hóa lên S3
+            PutObjectRequest putObjectRequest = PutObjectRequest.builder()
+                    .bucket(bucketName)
+                    .key(s3Key)
+                    .build();
+            s3Client.putObject(putObjectRequest, RequestBody.fromBytes(encryptedBytes));
+
+            return "/storage/" + folder + "/" + finalName; // Trả về fileUrl cho Document
         } catch (Exception e) {
-            throw new IOException("Encryption failed", e);
+            throw new IOException("Encryption or S3 upload failed", e);
         }
     }
 
     public Resource loadFile(String folder, String filename, String password) throws IOException {
-        Path filePath = Paths.get(baseUri, folder).resolve(filename).normalize();
+        String s3Key = folder + "/" + filename;
 
-        if (!Files.exists(filePath)) {
-            throw new IOException("File not found: " + filePath);
-        }
-
+        // Kiểm tra metadata
         String fileUrl = "/storage/" + folder + "/" + filename;
         Document document = documentRepository.findByFileUrl(fileUrl);
         if (document == null) {
@@ -73,34 +66,38 @@ public class FileService {
         }
 
         try {
-            byte[] encryptedBytes = Files.readAllBytes(filePath);
+            // Tải tệp tin từ S3
+            GetObjectRequest getObjectRequest = GetObjectRequest.builder()
+                    .bucket(bucketName)
+                    .key(s3Key)
+                    .build();
+            byte[] encryptedBytes = s3Client.getObject(getObjectRequest).readAllBytes();
+
+            // Giải mã
             byte[] decryptedBytes = AESUtil.decrypt(encryptedBytes, password);
             return new ByteArrayResource(decryptedBytes);
         } catch (Exception e) {
-            throw new IOException("Could not decrypt the file: " + filename, e);
+            throw new IOException("Could not decrypt or download file from S3: " + filename, e);
         }
     }
 
     public void deleteFile(String fileUrl) throws IOException {
-        // Chuyển fileUrl thành đường dẫn vật lý
         if (fileUrl == null || !fileUrl.startsWith("/storage/")) {
             throw new IOException("Invalid file URL: " + fileUrl);
         }
 
-        // Loại bỏ phần "/storage/" để lấy folder và filename
-        String relativePath = fileUrl.substring("/storage/".length());
-        Path filePath = Paths.get(baseUri, relativePath).normalize();
+        String s3Key = fileUrl.substring("/storage/".length());
 
-        if (Files.exists(filePath)) {
-            try {
-                Files.delete(filePath);
-                System.out.println(">>> DELETED FILE: " + filePath.toAbsolutePath());
-            } catch (IOException e) {
-                throw new IOException("Could not delete file: " + filePath, e);
-            }
-        } else {
-            System.out.println(">>> FILE NOT FOUND: " + filePath.toAbsolutePath());
+        try {
+            // Xóa tệp tin từ S3
+            DeleteObjectRequest deleteObjectRequest = DeleteObjectRequest.builder()
+                    .bucket(bucketName)
+                    .key(s3Key)
+                    .build();
+            s3Client.deleteObject(deleteObjectRequest);
+            System.out.println(">>> DELETED FILE FROM S3: " + s3Key);
+        } catch (Exception e) {
+            throw new IOException("Could not delete file from S3: " + s3Key, e);
         }
     }
 }
-
